# probabilistic_pca

./: Probabilistic_PCA_inferpy.ipynb  README.md  dp_factor_models.py  dp_factor_video_demo.ipynb  pyproject.toml
