[project]
name = "probabilistic-pca"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arviz>=0.22.0",
    "edward>=1.3.5",
    "h5py>=3.14.0",
    "ipython>=8.37.0",
    "jax[cuda12]>=0.6.2",
    "matplotlib>=3.10.6",
    "numpyro>=0.19.0",
    "opencv-python-headless>=4.12.0.88",
    "pymc>=5.10",
    "scipy>=1.15.3",
    "tensorflow>=2.20.0",
]
